like btn working

--- a/Stocks-Frontend/index.html
+++ b/Stocks-Frontend/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link js-scroll-trigger" href="#projects">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#signup">Comments</a>
           </li>
         </ul>
       </div>
@@ -59,7 +59,7 @@
        
         <h2 id=like-count class= mx-auto mt-2 mb-5> </h2>
 
-        <button type="button" class="btn btn-dark">Like<i class="far fa-thumbs-up"></i></button> <br> <br>
+        <button id="likeBTN" type="button" class="btn btn-dark">Like<i class="far fa-thumbs-up"></i></button> <br> <br>
 
         <a href="#about" class="btn btn-primary js-scroll-trigger">Stock Prices</a>
       </div>
@@ -157,22 +157,28 @@
     </div>
   </section>
 
-  <!-- Signup Section -->
+  <!-- comments Section -->
   <section id="signup" class="signup-section">
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
 
-          <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-          <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+          <i class="far fa-comments fa-2x mb-2 text-white"></i>
+          <h2 class="text-white mb-5">Leave a Comment!</h2>
 
           <form class="form-inline d-flex">
-            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
-            <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
+            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter comment...">
+            <button type="submit" class="btn btn-primary mx-auto">Add Comment</button>
           </form>
 
         </div>
       </div>
+    </div>
+
+    <div class="col-md-10 col-lg-8 mx-auto text-center text-white">
+        <br><br>
+      <h2>Comments:</h2>
+
     </div>
   </section>
 
