--- a/Stocks-Frontend/index.html
+++ b/Stocks-Frontend/index.html
@@ -101,6 +101,7 @@
               <table class="table table-striped table-dark" id=userPortfolio>
                   <thead>
                     <tr>
+                      <th scope="col">#</th>
                       <th scope="col">Name</th>
                       <th scope="col">Price</th>
                       <th scope="col">Change</th>
@@ -108,7 +109,7 @@
                 
                     </tr>
                   </thead>
-                <tbody id=tableBodyX>
+                <tbody id="tableBodyX">
 
                 </tbody>
              
