multi page modal working

--- a/Stocks-Frontend/index.html
+++ b/Stocks-Frontend/index.html
@@ -201,9 +201,9 @@
                 
                 </div>
                 <script>
-                $('#bs4-slide-carousel').carousel({
-                  interval: 3000
-                })
+                // $('#bs4-slide-carousel').carousel({
+                //   interval: 3000
+                // })
                 </script>
 
 
